# pku-autonomous-driving

./: README.md  main.ipynb  predict.ipynb  pyproject.toml  train.ipynb
pku_autonomous_driving/: .geometry.py.swp  .graphics.py.swp  .transform.py.swp  __init__.py  centernet.py  const.py  dataset.py  geometry.py  graphics.py  improc.py  io.py  prediction.py  resnet.py  train.py  training.py  transform.py  util.py  visualize.py
scripts/: clean_cells.sh  main.ipynb  setup_dataset.sh  train_far_network.sh  train_near_network.sh
