[tool.poetry]
name = "pku-autonomous-driving"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.3.0"
numpy = "^1.16.0"
pandas = "^0.25.0"
opencv-python = "^4.1.0"
sklearn = "^0.0"
scipy = "^1.2.0"
tqdm = "^4.36.0"
pre-commit = "^1.20.0"
matplotlib = "^3.1"
torchvision = "^0.4.2"
pillow = "=6.2.1"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-mypy = "^0.1.8"
kkt = {git = "git@github.com:ar90n/kkt.git"}
pre-commit = "^1.20"
jupyter = "^1.0.0"

[tool.kkt]
enable_git_tag = true

[tool.kkt.meta_data]
code_file = "train.ipynb"
competition = "pku-autonomous-driving"
dataset_sources = ["ar90ngas/pkuautonomousdrivingtraining", "ar90ngas/my-work"]
enable_gpu = true
enable_internet = false
is_private = true
competition_sources = ["pku-autonomous-driving"]
kernel_type = "notebook"
slug = "pku-autonomous-driving"

#[tool.kkt.environment_variables]
#INITIAL_WEIGHTS = "../input/pkuautonomousdrivingtraining/resnext50.pth"
#TRANSFORM_TYPE = "NEAR"

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
